fix: update light-dark switch visibility for smaller screens and fix header positioning

--- a/src/app/_components/light-dark-switch/light-dark-switch.module.css
+++ b/src/app/_components/light-dark-switch/light-dark-switch.module.css
@@ -25,6 +25,10 @@
 
   justify-content: unset;
 
+  @media (width < 640px) {
+    display: none;
+  }
+
   &:active {
     background-color: var(--color-gray-100);
   }
