--- a/src/app/index.module.css
+++ b/src/app/index.module.css
@@ -10,7 +10,9 @@
     position: absolute;
 
     inset-block-start: 0;
-    inset-inline-start: 0;
+    inset-inline-end: 0;
+
+    background-color: transparent;
   }
 
   display: flex;
